manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-web-dchr-host
spec:
  type: NodePort
  selector:
    app: prod-web-dchr-host
  ports:
    - name: http
      protocol: TCP
      nodePort: 30000
      port: 7770
      targetPort: 8100

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-web-dchr-host
spec:
  replicas: 5
  selector:
    matchLabels:
      app: prod-web-dchr-host
  template:
    metadata:
      labels:
        app: prod-web-dchr-host
    spec:
      containers:
        - name: web-dchr-host
          image: registry.gitlab.com/dechristopher/dchr.host:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 8100
              protocol: TCP
---
