manifest.yml
---
kind: Service
apiVersion: v1
metadata:
  name: prod-dchr-host
spec:
  type: LoadBalancer
  selector:
    app: prod-dchr-host
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-dchr-host
spec:
  replicas: 4
  selector:
    matchLabels:
      app: prod-dchr-host
  template:
    metadata:
      labels:
        app: prod-dchr-host
    spec:
      containers:
        - name: dchrhost
          image: registry.gitlab.com/dechristopher/dchr.host:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
      imagePullSecrets:
        - name: regcred
